* POD cleanups * Additional tests of database backed models * Disabled versioned records, as the versioned stuff isn't at all baked
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/virtual-models@2787 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-DatabaseBackedModels/etc/config.yml
+++ b/t/TestApp-DatabaseBackedModels/etc/config.yml
@@ -1,5 +1,5 @@
 --- 
-framework: 
+framework:
   AdminMode: 1
   ApplicationClass: TestApp::DatabaseBackedModels
   ApplicationName: TestApp-DatabaseBackedModels
@@ -9,7 +9,8 @@ framework:
     Driver: SQLite
     Host: localhost
     Password: ''
-    RecordBaseClass: Jifty::Record::Versioned
+    RecordBaseClass: Jifty::DBI::Record::Cachable
+    RecordUUIDs: active
     User: ''
     Version: 0.0.1
   DevelMode: 1
