--- a/examples/Chat/etc/config.yml
+++ b/examples/Chat/etc/config.yml
@@ -17,7 +17,7 @@ framework:
   DevelMode: 0
   L10N:
     PoDir: share/po
-  LogLevel: INFO
+  LogLevel: DEBUG
   Mailer: Sendmail
   MailerArgs: []
   Plugins: []
