* examples/{Chat,Clock,Ping}/: Use Jifty::Server::Fork instead of   stub ::Server subclasses.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2876 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Clock/etc/config.yml
+++ b/examples/Clock/etc/config.yml
@@ -34,4 +34,4 @@ framework:
     ServeStaticFiles: 1
     StaticRoot: share/web/static
     TemplateRoot: share/web/templates
-    ServerClass: Clock::Server
+    ServerClass: Jifty::Server::Fork
