--- a/examples/Ping/etc/config.yml
+++ b/examples/Ping/etc/config.yml
@@ -37,4 +37,4 @@ framework:
     ServeStaticFiles: 1
     StaticRoot: share/web/static
     TemplateRoot: share/web/templates
-    ServerClass: Ping::Server
+    ServerClass: Jifty::Server::Fork
