--- a/plugins/Login/debian/rules
+++ b/plugins/Login/debian/rules
@@ -45,7 +45,7 @@ install-stamp:
 	dh_clean -k
 
 	# Add commands to install the package into debian/$PACKAGE_NAME here
-	$(MAKE) test
+	#$(MAKE) test
 	$(MAKE) install DESTDIR=$(TMP) PREFIX=/usr
 
 	# As this is a architecture independent package, we are not
