* next major round of work on the login plugin. signup now works
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2978 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-Plugin-PasswordAuth/etc/config.yml
+++ b/t/TestApp-Plugin-PasswordAuth/etc/config.yml
@@ -17,8 +17,9 @@ framework:
   L10N: 
     PoDir: share/po
   LogLevel: DEBUG
-  Mailer: Sendmail
-  MailerArgs: []
+  Mailer: IO
+  MailerArgs:
+    - %log/mail.log%
 
   Plugins: 
     - User: {}
