--- a/debian/control
+++ b/debian/control
@@ -69,9 +69,9 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libmime-types-perl, libmodule-pluggable-perl (>> 3.1),
  libmodule-corelist-perl, libmodule-refresh-perl,
  libmodule-scandeps-perl, libobject-declare-perl (>> 0.22),
- libparams-validate-perl, libscalar-defer-perl (>> 0.06),
+ libparams-validate-perl, libscalar-defer-perl (>> 0.10),
  libstring-koremutake-perl, libsql-reservedwords-perl,
- libtemplate-declare-perl, 
+ libtemplate-declare-perl (>> 0.06), 
  libtest-base-perl, libuniversal-require-perl, liburi-perl,
  libxml-writer-perl (>> 0.601), libxml-simple-perl,
  libxml-xpath-perl, libversion-perl, libyaml-syck-perl (>> 0.72), 
