--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,22 @@
+--- 
 build_requires: 
   ExtUtils::MakeMaker: 6.11
 distribution_type: module
-generated_by: Module::Install version 0.640
+generated_by: Module::Install version 0.650
 license: Perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Jifty
 no_index: 
   directory: 
-    - share
-    - t
+    - debian
     - doc
+    - examples
     - inc
     - t
   package: 
     - DB
-    - inc
 recommends: 
   Apache2::Const: 0
   Class::Accessor::Named: 0
@@ -23,16 +26,13 @@ recommends:
   Module::Install::Admin: 0.50
   Module::Refresh: 0.09
   Net::Server::Fork: 0
+  Net::Server::PreFork: 0
   PAR::Dist::FromCPAN: 0
   Test::Base: 0.44
   Test::HTML::Lint: 0
   Test::HTTP::Server::Simple: 0.02
   Test::MockModule: 0.05
   Test::MockObject: 1.07
-  Test::More: 0.62
-  Test::Pod::Coverage: 0
-  Test::WWW::Mechanize: 1.04
-  WWW::Mechanize: 1.12
 requires: 
   App::CLI: 0.03
   CGI: 3.19
@@ -75,7 +75,7 @@ requires:
   Hook::LexWrap: 0
   IPC::PubSub: 0.23
   JSON::Syck: 0.15
-  Jifty::DBI: 0.31
+  Jifty::DBI: 0.40
   LWP::UserAgent: 0
   Locale::Maketext::Extract: 0.20
   Locale::Maketext::Lexicon: 0.60
@@ -90,13 +90,17 @@ requires:
   Params::Validate: 0
   Pod::Simple: 0
   SQL::ReservedWords: 0
-  Scalar::Defer: 0.06
+  Scalar::Defer: 0.10
   Shell::Command: 0
   String::Koremutake: 0
-  Template::Declare: 0.06
+  Template::Declare: 0.07
   Test::Base: 0
+  Test::More: 0.62
+  Test::Pod::Coverage: 0
+  Test::WWW::Mechanize: 1.04
   UNIVERSAL::require: 0
   URI: 0
+  WWW::Mechanize: 1.12
   XML::Simple: 0
   XML::Writer: 0.601
   XML::XPath: 0
@@ -105,4 +109,4 @@ requires:
   perl: 5.8.3
   version: 0
 tests: t/*.t t/*/t/*.t
-version: 0.70117
+version: 0.70415
