* starting out the tests for the news plugin
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3257 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -13,6 +13,8 @@ no_index:
     - debian
     - doc
     - examples
+    - share
+    - plugins/*/t
     - inc
     - t
   package: 
@@ -109,4 +111,4 @@ requires:
   perl: 5.8.3
   version: 0
 tests: t/*.t t/*/t/*.t
-version: 0.70415
+version: 0.70422
