* META.yml updates
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3294 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -21,12 +21,16 @@ no_index:
     - DB
 recommends: 
   Apache2::Const: 0
+  Cache::FileCache: 0
   Class::Accessor::Named: 0
   DBD::SQLite: 0
   Devel::Cover: 0
+  Devel::EvalContext: 0
+  LWPx::ParanoidAgent: 0
   Module::CoreList: 0
   Module::Install::Admin: 0.50
   Module::Refresh: 0.09
+  Net::OpenID::Consumer: 0
   Net::Server::Fork: 0
   Net::Server::PreFork: 0
   PAR::Dist::FromCPAN: 0
