* debian fix dep
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3306 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,8 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libcrypt-cbc-perl, libcrypt-rijndael-perl,
  libcompress-zlib-perl, libcss-squish-perl (>> 0.05), 
  libdbd-sqlite3-perl, libdata-page-perl, libossp-uuid-perl,
- libdatetime-perl, libdate-manip-perl, libemail-folder-perl,
+ libdatetime-perl, libdatetime-format-builder-perl, 
+ libdate-manip-perl, libemail-folder-perl,
  libemail-localdelivery-perl, libemail-mime-perl,
  libemail-mime-creator-perl, libemail-mime-contenttype-perl,
  libemail-send-perl (>> 1.99_01), libemail-simple-perl,
@@ -65,7 +66,7 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libwww-perl, libhttp-server-simple-perl (>> 0.26), 
  libhttp-server-simple-recorder-perl, libhash-merge-perl, libhook-lexwrap-perl,
  libipc-pubsub-perl (>> 0.23), libjifty-dbi-perl (>> 0.40),
- liblocale-maketext-lexicon-perl, liblog-log4perl-perl,
+ liblocale-maketext-lexicon-perl, liblocale-maketext-simple-perl, liblog-log4perl-perl,
  libmime-types-perl, libmodule-pluggable-perl (>> 3.1),
  libmodule-corelist-perl, libmodule-refresh-perl,
  libmodule-scandeps-perl, libobject-declare-perl (>> 0.22),
