--- a/debian/control
+++ b/debian/control
@@ -53,6 +53,7 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  perl-modules, libcgi-cookie-splitter-perl, libcgi-simple-perl,
  libcrypt-cbc-perl, libcrypt-rijndael-perl,
  libcompress-zlib-perl, libcss-squish-perl (>> 0.05), 
+ libclass-trigger-perl, libdevel-evalcontext-perl,
  libdbd-sqlite3-perl, libdata-page-perl, libossp-uuid-perl,
  libdatetime-perl, libdatetime-format-builder-perl, 
  libdate-manip-perl, libemail-folder-perl,
@@ -67,7 +68,7 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libhttp-server-simple-recorder-perl, libhash-merge-perl, libhook-lexwrap-perl,
  libipc-pubsub-perl (>> 0.23), libjifty-dbi-perl (>> 0.40),
  liblocale-maketext-lexicon-perl, liblocale-maketext-simple-perl, liblog-log4perl-perl,
- libmime-types-perl, libmodule-pluggable-perl (>> 3.1),
+ libmime-types-perl, libmodule-pluggable-perl (>> 3.5),
  libmodule-corelist-perl, libmodule-refresh-perl,
  libmodule-scandeps-perl, libobject-declare-perl (>> 0.22),
  libparams-validate-perl, libscalar-defer-perl (>> 0.10),
