Example::Todo is too hard to type.  Yada!
 r18180@ubuntu:  clkao | 2007-06-11 04:42:19 -0400
 yada!
 r18181@ubuntu:  clkao | 2007-06-11 04:44:38 -0400
 yada!
 r18182@ubuntu:  clkao | 2007-06-11 04:46:17 -0400
 yada!
 r18183@ubuntu:  clkao | 2007-06-11 05:03:12 -0400
 yada!


git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3441 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Yada/etc/config.yml
+++ b/examples/Yada/etc/config.yml
@@ -4,7 +4,7 @@ application:
 framework: 
   AdminMode: 1
   SkipAccessControl: 1
-  ApplicationClass: Example::Todo
+  ApplicationClass: Yada
   ApplicationName: Example-Todo
   ApplicationUUID: 80DF397A-D999-11DB-B80A-9318EBB6763A
   Database: 
@@ -38,7 +38,7 @@ framework:
   PubSub: 
     Backend: Memcached
     Enable: ~
-  TemplateClass: Example::Todo::View
+  TemplateClass: Yada::View
   Web: 
     BaseURL: http://localhost
     DataDir: var/mason
