Helper method for mounting crud view.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3443 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Yada/etc/config.yml
+++ b/examples/Yada/etc/config.yml
@@ -5,11 +5,11 @@ framework:
   AdminMode: 1
   SkipAccessControl: 1
   ApplicationClass: Yada
-  ApplicationName: Example-Todo
+  ApplicationName: Yada
   ApplicationUUID: 80DF397A-D999-11DB-B80A-9318EBB6763A
   Database: 
     CheckSchema: 1
-    Database: example_todo
+    Database: yada
     Driver: SQLite
     Host: localhost
     Password: ''
