Rework the client caching to use a closure translated from td, rather than trimpath. only static works now. client side action logic to be reimplemented in js.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/trimclient@3511 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Yada/etc/config.yml
+++ b/examples/Yada/etc/config.yml
@@ -2,6 +2,7 @@
 application:
   OpenIDSecret: sekrit13
 framework: 
+  ConfigFileVersion: 2
   AdminMode: 1
   SkipAccessControl: 1
   ApplicationClass: Yada
@@ -34,6 +35,7 @@ framework:
     - User: {}
     - Authentication::Password: {}
     - OpenID: {}
+    - SinglePage: {}
 
   PubSub: 
     Backend: Memcached
