trimclient is only enabled when ClientTemplate is specificed in config.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/trimclient@3627 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Yada/etc/config.yml
+++ b/examples/Yada/etc/config.yml
@@ -41,6 +41,7 @@ framework:
     Backend: Memcached
     Enable: ~
   TemplateClass: Yada::View
+  ClientTemplate: 1
   Web: 
     BaseURL: http://localhost
     DataDir: var/mason
