* Incredibly naive "image column" userpic plugin.     - should mark the column as not to be preloaded in regular operation     - should not hardocde mimetype     - should have a pretty ajax picker     - should limit the image's size
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3667 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -39,6 +39,7 @@ recommends:
   Test::HTTP::Server::Simple: 0.02
   Test::MockModule: 0.05
   Test::MockObject: 1.07
+  WWW::Facebook::API: 0.3.6
 requires: 
   App::CLI: 0.03
   CGI: 3.19
@@ -81,6 +82,7 @@ requires:
   Hash::Merge: 0
   Hook::LexWrap: 0
   IPC::PubSub: 0.23
+  IPC::Run3: 0
   JSON::Syck: 0.15
   Jifty::DBI: 0.40
   LWP::UserAgent: 0
@@ -100,7 +102,7 @@ requires:
   Scalar::Defer: 0.10
   Shell::Command: 0
   String::Koremutake: 0
-  Template::Declare: 0.07
+  Template::Declare: 0.21
   Test::Base: 0
   Test::LongString: 0
   Test::More: 0.62
