* Moniker bulletproofing. Suggested by Mikko Lapasti
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3730 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -65,6 +65,7 @@ requires:
   Email::MIME::ContentType: 0
   Email::MIME::CreateHTML: 0
   Email::MIME::Creator: 0
+  Email::MIME::Modifier: 0
   Email::Send: 1.99_01
   Email::Simple: 0
   Email::Simple::Creator: 0
@@ -97,6 +98,7 @@ requires:
   Module::Refresh: 0
   Module::ScanDeps: 0
   Object::Declare: 0.13
+  PadWalker: 0
   Params::Validate: 0
   Pod::Simple: 0
   SQL::ReservedWords: 0
