--- a/debian/control
+++ b/debian/control
@@ -57,10 +57,11 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libdbd-sqlite3-perl, libdata-page-perl, libossp-uuid-perl,
  libdatetime-perl, libdatetime-format-builder-perl, 
  libdate-manip-perl, libemail-folder-perl,
- libemail-localdelivery-perl, libemail-mime-perl,
- libemail-mime-creator-perl, libemail-mime-contenttype-perl,
- libemail-send-perl (>> 1.99_01), libemail-simple-perl,
+ libemail-messageid-perl, libemail-mime-perl, libemail-mime-encodings-perl, libemail-mime-perl, libemail-mime-encodings-perl, libemail-mime-contenttype-perl, libemail-simple-perl, libemail-mime-modifier-perl, libemail-mime-creator-perl, libemail-mime-createhtml-perl,
+ libemail-localdelivery-perl, 
+ libemail-send-perl (>> 1.99_01), 
  libemail-simple-creator-perl, libexporter-lite-perl,
+ libextutils-command-perl, 
  libfile-find-rule-perl, libfile-mmagic-perl,
  libfile-sharedir-perl (>> 0.04), libhtml-parser-perl,
  libhtml-lint-perl, libhtml-mason-perl (>> 1.31), 
@@ -73,8 +74,9 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libmodule-scandeps-perl, libobject-declare-perl (>> 0.22),
  libparams-validate-perl, libscalar-defer-perl (>> 0.10),
  libstring-koremutake-perl, libsql-reservedwords-perl,
- libtemplate-declare-perl (>> 0.21), 
- libtest-base-perl, libuniversal-require-perl, liburi-perl,
+ libtemplate-declare-perl (>> 0.26), 
+ libtest-base-perl, libtest-log4perl-perl, 
+ libuniversal-require-perl, liburi-perl,
  libxml-writer-perl (>> 0.601), libxml-simple-perl,
  libxml-xpath-perl, libversion-perl, libyaml-syck-perl (>> 0.72), 
  libyaml-perl (>> 0.35), libjson-perl (>> 0.01),
@@ -86,7 +88,8 @@ Recommends: libmodule-install-perl,
  libmodule-install-perl, libpar-dist-fromcpan-perl, libtest-mockobject-perl,
  libtest-mockmodule-perl,
  libcgi-fast-perl, libapache-mod-fastcgi,
- libjifty-plugin-editinplace-perl, libjifty-plugin-login-perl
+ libjifty-plugin-editinplace-perl, libjifty-plugin-login-perl,
+ libimage-info-perl, libchart-perl, libgd-gd2-perl, libgd-graph-perl
 Description: Jifty perl libraries
  Yet another web framework.
  .
