t/TestApp-Plugin-JQuery/etc/config.yml: colons in the database name is not allowed on win32
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3958 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-Plugin-JQuery/etc/config.yml
+++ b/t/TestApp-Plugin-JQuery/etc/config.yml
@@ -7,7 +7,7 @@ framework:
   ConfigFileVersion: 2
   Database: 
     CheckSchema: 1
-    Database: testapp::plugin::jquery
+    Database: testapp_plugin_jquery
     Driver: SQLite
     Host: localhost
     Password: ''
