* tabview shouldn't force absolute paths to relative ones
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4073 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -117,8 +117,9 @@ requires:
   Test::More: 0.62
   Test::Pod::Coverage: 0
   Test::WWW::Mechanize: 1.04
+  Test::WWW::Selenium: 0
   UNIVERSAL::require: 0
-  URI: 0
+  URI: 1.31
   WWW::Mechanize: 1.3
   XML::Simple: 0
   XML::Writer: 0.601
