* Updated the JSON and YAML transports for web service requests to allow complex data structures in actions
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4151 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -27,6 +27,10 @@ recommends:
   DBD::SQLite: 0
   Devel::Cover: 0
   Devel::EvalContext: 0
+  Devel::Events: 0.02
+  Devel::Events::Generator::Objects: 0
+  Devel::Events::Handler::ObjectTracker: 0
+  Devel::Size: 0
   GD: 0
   GD::Graph: 0
   Image::Info: 0
