A lot of POD for OAuth, and some tiny fixes elsewhere
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4272 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-Plugin-OAuth/etc/config.yml
+++ b/t/TestApp-Plugin-OAuth/etc/config.yml
@@ -22,15 +22,12 @@ framework:
   MailerArgs: []
 
   Plugins: 
-    - LetMe: {}
-    - SkeletonApp: {}
     - REST: {}
     - Halo: {}
-    - ErrorTemplates: {}
-    - OnlineDocs: {}
     - CompressedCSSandJS: {}
     - AdminUI: {}
     - OAuth: {}
+    - Authentication::Password: {}
 
   PubSub: 
     Backend: Memcached
