--- a/t/TestApp-Plugin-OAuth/etc/config.yml
+++ b/t/TestApp-Plugin-OAuth/etc/config.yml
@@ -28,6 +28,7 @@ framework:
     - AdminUI: {}
     - OAuth: {}
     - Authentication::Password: {}
+    - SkeletonApp: {}
 
   PubSub: 
     Backend: Memcached
