update fr.po and debian control
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4463 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/control
+++ b/debian/control
@@ -73,6 +73,7 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libmodule-corelist-perl, libmodule-refresh-perl,
  libmodule-scandeps-perl, libobject-declare-perl (>> 0.22),
  libparams-validate-perl, libscalar-defer-perl (>> 0.10),
+ libpadwalker-perl,
  libstring-koremutake-perl, libsql-reservedwords-perl,
  libtemplate-declare-perl (>> 0.26), 
  libtest-base-perl, libtest-log4perl-perl, 
