--- a/META.yml
+++ b/META.yml
@@ -50,6 +50,7 @@ recommends:
   Net::Server::Fork: 0
   Net::Server::PreFork: 0
   PAR::Dist::FromCPAN: 0
+  Proc::ProcessTable: 0
   Test::Base: 0.44
   Test::HTML::Lint: 0
   Test::HTTP::Server::Simple: 0.02
