* Email::MIME and Email::Simple went through a period of not talking    to each other, throwing crokery around, and generally making life    miserable for each other.  Force versions of things which are at    least on speaking terms again.  * Updated META.yml for that.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4803 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,9 @@
 --- 
+author: ~
 build_requires: 
   ExtUtils::MakeMaker: 6.11
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: Module::Install version 0.680
 license: Perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -29,9 +30,8 @@ recommends:
   DBD::SQLite: 0
   Devel::Cover: 0
   Devel::EvalContext: 0
-  Devel::Events: 0.02
-  Devel::Events::Generator::Objects: 0
-  Devel::Events::Handler::ObjectTracker: 0
+  Devel::Events::Objects: 0.02
+  Devel::Gladiator: 0
   Devel::Size: 0
   Digest::HMAC_SHA1: 0
   GD: 0
@@ -42,10 +42,7 @@ recommends:
   Module::Install::Admin: 0.50
   Module::Refresh: 0.09
   Net::LDAP: 0
-  Net::OAuth::AccessTokenRequest: 0
-  Net::OAuth::ProtectedResourceRequest: 0
   Net::OAuth::Request: 0.04
-  Net::OAuth::RequestTokenRequest: 0
   Net::OpenID::Consumer: 0
   Net::Server::Fork: 0
   Net::Server::PreFork: 0
@@ -82,14 +79,14 @@ requires:
   DateTime::Locale: 0
   Email::Folder: 0
   Email::LocalDelivery: 0.217
-  Email::MIME: 0
-  Email::MIME::ContentType: 0
+  Email::MIME: 1.861
+  Email::MIME::ContentType: 1.012
   Email::MIME::CreateHTML: 0
-  Email::MIME::Creator: 0
-  Email::MIME::Modifier: 0
-  Email::Send: 1.99_01
-  Email::Simple: 0
-  Email::Simple::Creator: 0
+  Email::MIME::Creator: 1.45
+  Email::MIME::Modifier: 1.442
+  Email::Send: 2.0
+  Email::Simple: 2.003
+  Email::Simple::Creator: 1.4
   Exporter::Lite: 0
   File::Find::Rule: 0
   File::MMagic: 0
@@ -125,7 +122,7 @@ requires:
   Params::Validate: 0
   Pod::Simple: 0
   SQL::ReservedWords: 0
-  Scalar::Defer: 0.10
+  Scalar::Defer: 0.12
   Shell::Command: 0
   String::Koremutake: 0
   Template::Declare: 0.26
