--- a/debian/control
+++ b/debian/control
@@ -60,7 +60,7 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libdbd-sqlite3-perl, libdata-page-perl, libossp-uuid-perl,
  libdatetime-perl, libdatetime-format-builder-perl, 
  libdate-manip-perl, libemail-folder-perl,
- libemail-messageid-perl, libemail-mime-perl, libemail-mime-encodings-perl, libemail-mime-perl, libemail-mime-encodings-perl, libemail-mime-contenttype-perl, libemail-simple-perl, libemail-mime-modifier-perl, libemail-mime-creator-perl, libemail-mime-createhtml-perl,
+ libemail-messageid-perl, libemail-mime-perl (>> 1.861), libemail-mime-encodings-perl, libemail-mime-perl, libemail-mime-encodings-perl, libemail-mime-contenttype-perl, libemail-simple-perl, libemail-mime-modifier-perl, libemail-mime-creator-perl, libemail-mime-createhtml-perl,
  libemail-localdelivery-perl (>> 0.217), 
  libemail-send-perl (>> 2.003), 
  libemail-simple-creator-perl, libexporter-lite-perl,
@@ -75,11 +75,11 @@ Depends: ${perl:Depends}, perl (>> 5.8.3),
  libmime-types-perl, libmodule-pluggable-perl (>> 3.5),
  libmodule-corelist-perl, libmodule-refresh-perl,
  libmodule-scandeps-perl, libobject-declare-perl (>> 0.22),
- libparams-validate-perl, libscalar-defer-perl (>> 0.10),
+ libparams-validate-perl, libscalar-defer-perl (>> 0.14),
  libpadwalker-perl,
  libstring-koremutake-perl, libsql-reservedwords-perl,
  libtemplate-declare-perl (>> 0.26), 
- libtest-base-perl, libtest-log4perl-perl, 
+ libtest-base-perl, libtest-log4perl-perl, libtest-www-selenium-perl, 
  libuniversal-require-perl, liburi-perl,
  libxml-writer-perl (>> 0.601), libxml-simple-perl,
  libxml-xpath-perl, libversion-perl, libyaml-syck-perl (>> 0.72), 
