--- a/META.yml
+++ b/META.yml
@@ -137,6 +137,7 @@ requires:
   Test::WWW::Selenium: 0
   UNIVERSAL::require: 0
   URI: 1.31
+  URI::Escape: 0
   WWW::Mechanize: 1.3
   XML::Simple: 0
   XML::Writer: 0.601
