Prototypeism removal in loc.js and the updated halo.js Add I18N into the plugin list in config.yml TestApp-JiftyJS so loc.js is included.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/jquery@5064 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-JiftyJS/etc/config.yml
+++ b/t/TestApp-JiftyJS/etc/config.yml
@@ -17,11 +17,16 @@ framework:
   DevelMode: 1
   L10N: 
     PoDir: share/po
+    AllowedLang:
+      - en
+      - zh_tw
   LogLevel: INFO
   Mailer: Sendmail
   MailerArgs: []
 
   Plugins: 
+    - I18N: { js: 1 }
+
     - 
       LetMe: {}
 
