force TestApp-JiftyJS to use en on server side, otherwise the browser launched by selenium might be trying to use other languages we have translation for, causing the expected error output being localized.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5122 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-JiftyJS/etc/config.yml
+++ b/t/TestApp-JiftyJS/etc/config.yml
@@ -17,6 +17,8 @@ framework:
   DevelMode: 1
   L10N: 
     PoDir: share/po
+    AllowedLang:
+      - en
   LogLevel: INFO
   Mailer: Sendmail
   MailerArgs: []
