Move over the prototype.js and scriptaculous javascriptfiles to Prototypism plugin directory.
Also bump the ConfigFileVersion 4. If less then 4, Prototypism will
be in the default plugin list to provide maxmum compatibility.


git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/jquery@5129 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-JiftyJS2/etc/config.yml
+++ b/t/TestApp-JiftyJS2/etc/config.yml
@@ -24,7 +24,6 @@ framework:
   MailerArgs: []
 
   Plugins: 
-    - Prototypism: {}
     - 
       LetMe: {}
 
@@ -44,7 +43,7 @@ framework:
       OnlineDocs: {}
 
     - 
-      CompressedCSSandJS: { js: 0 }
+      CompressedCSSandJS: { }
 
     - 
       AdminUI: {}
