--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,7 @@ author: ~
 build_requires: 
   ExtUtils::MakeMaker: 6.11
 distribution_type: module
-generated_by: Module::Install version 0.680
+generated_by: Module::Install version 0.68
 license: Perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -43,6 +43,7 @@ recommends:
   Module::CoreList: 0
   Module::Install::Admin: 0.50
   Module::Refresh: 0.09
+  Net::Akismet: 0
   Net::LDAP: 0
   Net::OAuth::Request: 0.05
   Net::OpenID::Consumer: 0
@@ -101,6 +102,7 @@ requires:
   HTML::Lint: 0
   HTML::Mason: 1.3101
   HTML::Mason::Plugin: 0
+  HTML::Scrubber: 0
   HTTP::Cookies: 0
   HTTP::Date: 0
   HTTP::Server::Simple: 0.28
@@ -115,6 +117,7 @@ requires:
   Locale::Maketext::Extract: 0.20
   Locale::Maketext::Lexicon: 0.60
   Log::Log4perl: 1.04
+  MIME::Base64::URLSafe: 0
   MIME::Types: 0
   Module::CoreList: 0
   Module::Pluggable: 3.5
@@ -125,6 +128,7 @@ requires:
   PadWalker: 0
   Params::Validate: 0
   Pod::Simple: 0
+  Regexp::Common: 0
   SQL::ReservedWords: 0
   Scalar::Defer: 0.12
   Shell::Command: 0
