--- a/META.yml
+++ b/META.yml
@@ -150,5 +150,5 @@ requires:
   YAML::Syck: 0.71
   perl: 5.8.3
   version: 0
-tests: t/*.t t/*/*.t t/*/*/*.t t/*/*/*/*.t
+tests: t/*.t t/*/*.t t/*/*/*.t t/*/*/*/*.t plugins/TabView/t/*.t
 version: 0.80408
